Fixed overflow issue on mobile safari

--- a/site/styles.css
+++ b/site/styles.css
@@ -428,6 +428,7 @@ ul {
 .shapes {
   position: absolute;
   width: 730px;
+  max-width: 100%;
   height: 600px;
   top: 0px;
   left: 0px;
